<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_vitis</name>
  <version>0.2.0</version>
  <description>Add functions and macros to facilitate Xilinx Vitis processes.</description>
  <maintainer email="victorma@xilinx.com">Víctor Mayoral Vilches</maintainer>
  <author email="victorma@xilinx.com">Víctor Mayoral Vilches</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
