<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_vitis</name>
  <version>0.10.1</version>
  <description>
    CMake macros and utilities to include Vitis platform into the ROS 2 build system (ament) and its development flows.
  </description>
  <maintainer email="victor@accelerationrobotics.com">Víctor Mayoral Vilches</maintainer>
  <author email="victor@accelerationrobotics.com">Víctor Mayoral Vilches</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <depend>ament_acceleration</depend>
  <depend>ament_cmake_ros</depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
